Auto: Run experiment with id: exp_487e94658069

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,7 +2,7 @@ stages:
   rulebase_evaluate:
     foreach: ${rulebase_funcs}
     do: 
-      cmd: python -m run.rulebase_evaluate --rulebase_func_name ${item} --submit_file_name ${submit_file_name} --exp_id ${run.id}
+      cmd: python -m run.rulebase_evaluate --rulebase_func_name ${item} --submit_file_name ${submit_file_name}
       deps:
         - data/submit/${submit_file_name}.csv
       outs:
@@ -11,7 +11,7 @@ stages:
   llm_evaluate:
     foreach: ${prompts}
     do: 
-      cmd: python -m run.llm_evaluate --prompt_name ${item} --submit_file_name ${submit_file_name} --exp_id ${run.id}
+      cmd: python -m run.llm_evaluate --prompt_name ${item} --submit_file_name ${submit_file_name}
       deps:
         - data/submit/${submit_file_name}.csv
         - src/judge/prompt/${item}.txt
