--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "dvc-s3 (>=3.2.0,<4.0.0)",
     "dvc-ssh (>=4.2.1,<5.0.0)",
     "mlflow (>=2.22.1,<3.0.0)",
-    "pandas (==2.2.0)"
+    "pandas (==2.2.0)",
+    "jupyterlab (>=4.4.3,<5.0.0)",
+    "notebook (>=7.4.3,<8.0.0)"
 ]
 
 
