--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,8 +5,8 @@ stages:
       - data/generate_target/${generate.generate_data_name}.csv
       - src/generate/prompt/${generate.generate_prompt_name}.txt
       - run/llm_generate.py
-    # outs:
-    #   - data/submit/
+    outs-persist:
+      - data/submit/
     params:
       - generate
 
