Auto: Run experiment with id: exp_55e96092757c

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,8 +5,8 @@ stages:
       - data/generate_target/${generate.generate_data_name}.csv
       - src/generate/prompt/${generate.generate_prompt_name}.txt
       - run/llm_generate.py
-    outs-persist:
-      - data/submit/
+    outs:
+      - data/submit/${generate_target_name}_${prompt_name}.csv
     params:
       - generate
 
