--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "mlflow (>=2.22.1,<3.0.0)",
     "pandas (==2.2.0)",
     "jupyterlab (>=4.4.3,<5.0.0)",
-    "notebook (>=7.4.3,<8.0.0)"
+    "notebook (>=7.4.3,<8.0.0)",
+    "yq (>=3.4.3,<4.0.0)"
 ]
 
 
