--- a/params.yaml
+++ b/params.yaml
@@ -21,7 +21,7 @@ judge:
         - fillng_variable_name: search_idol_name
           filling_value: るり
     - name: ruri_in_text_in_3nensei
-      prompt: check_if_category_in_text
+      prompt_name: check_if_category_in_text
       prompt_insert:
         - fillng_variable_name: search_idol_name
           filling_value: るり
@@ -29,7 +29,7 @@ judge:
         - filter_col_name: gakunen 
         - filter_value: 3年生
     - name: ruri_in_text_in_2nensei
-      prompt: check_if_category_in_text
+      prompt_name: check_if_category_in_text
       prompt_insert:
         - fillng_variable_name: category
           filling_value: るり
@@ -38,4 +38,4 @@ judge:
         - filter_value: 2年生
       
     - name: check_if_gakunen_in_text
-      prompt: check_if_gakunen_in_text
+      prompt_name: check_if_gakunen_in_text
