--- a/params.yaml
+++ b/params.yaml
@@ -41,6 +41,20 @@ judge:
       filter:
         - filter_col_name: gakunen 
           filter_value: 2年生
+    - name: pair_kyokumei_dododo
+      prompt_name: pair_check_word
+      prompt_insert:
+        - filling_variable_name: search_song_name
+          filling_value: ドドド
+      pair_csv_name: data_set_idol_discription_pair
+
+
+    - name: pair_kyokumei_banyu
+      prompt_name: pair_check_word
+      prompt_insert:
+        - filling_variable_name: search_song_name
+          filling_value: 万有グラビティ
+      pair_csv_name: data_set_idol_discription_pair
       
     - name: check_if_gakunen_in_text
       prompt_name: check_if_gakunen_in_text
