Auto: Run experiment with id: exp_529cbc2446f1

--- a/params.yaml
+++ b/params.yaml
@@ -17,16 +17,19 @@ judge:
   judge_menus:
     - name: hime_in_text
       prompt_name: check_if_category_in_text
+      pair_csv_name:
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: ひめ
     - name: ruri_in_text
       prompt_name: check_if_category_in_text
+      pair_csv_name:
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: るり
     - name: ruri_in_text_in_3nensei
       prompt_name: check_if_category_in_text
+      pair_csv_name:
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: るり
@@ -35,6 +38,7 @@ judge:
           filter_value: 3年生
     - name: ruri_in_text_in_2nensei
       prompt_name: check_if_category_in_text
+      pair_csv_name:
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: るり
@@ -44,18 +48,18 @@ judge:
     
     - name: pair_kyokumei_dododo
       prompt_name: pair_check_word
+      pair_csv_name: data_set_idol_discription_pair
       prompt_insert:
         - filling_variable_name: search_song_name
           filling_value: ドドド
-      pair_csv_name: data_set_idol_discription_pair
-
 
     - name: pair_kyokumei_banyu
       prompt_name: pair_check_word
+      pair_csv_name: data_set_idol_discription_pair
       prompt_insert:
         - filling_variable_name: search_song_name
           filling_value: 万有グラビティ
-      pair_csv_name: data_set_idol_discription_pair
       
     - name: check_if_gakunen_in_text
+      pair_csv_name:
       prompt_name: check_if_gakunen_in_text
