--- a/params.yaml
+++ b/params.yaml
@@ -17,19 +17,19 @@ judge:
   judge_menus:
     - name: hime_in_text
       prompt_name: check_if_category_in_text
-      pair_csv_name:
+      pair_csv_name: None
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: ひめ
     - name: ruri_in_text
       prompt_name: check_if_category_in_text
-      pair_csv_name:
+      pair_csv_name: None
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: るり
     - name: ruri_in_text_in_3nensei
       prompt_name: check_if_category_in_text
-      pair_csv_name:
+      pair_csv_name: None
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: るり
@@ -38,7 +38,7 @@ judge:
           filter_value: 3年生
     - name: ruri_in_text_in_2nensei
       prompt_name: check_if_category_in_text
-      pair_csv_name:
+      pair_csv_name: None
       prompt_insert:
         - filling_variable_name: search_idol_name
           filling_value: るり
@@ -61,5 +61,5 @@ judge:
           filling_value: 万有グラビティ
       
     - name: check_if_gakunen_in_text
-      pair_csv_name:
+      pair_csv_name: None
       prompt_name: check_if_gakunen_in_text
